--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,24 +1,41 @@
 name: Generate Snake
 
 on:
+  # Run automatically every 12 hours
   schedule:
-    # Runs every 12 hours
-    - cron: "0 */12 * * *"
+    - cron: "0 */12 * * *" 
+  
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  
+  # Run on every push to the master branch
+  push:
+    branches:
+    - master
+    - main
 
 jobs:
-  build:
+  generate:
+    permissions: 
+      contents: write
     runs-on: ubuntu-latest
+    timeout-minutes: 5
+    
     steps:
-      - uses: actions/checkout@v2
-      - uses: Platane/snk@v2
-        id: snake-gif
+      # Generates the snake  
+      - name: generate-snake-game-from-github-contribution-grid
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: FOX-KNIGHT
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Pushes the snake to the output branch
+      - name: push-snake-to-output-branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
